# pyjags_JW

./: .gitignore  CMakeLists.txt  README.md  README.rst  RELEASE_NOTES.md  publishing_on_pypi.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheels.yml  build.yml  ci.yml  wheels.yml
ci/: build_jags.sh  build_jags_macos.sh  build_jags_windows.ps1  install_jags_linux.sh  install_jags_macos.sh  manylinux-jags.Dockerfile  run_tests.sh
notebooks/: Advanced Functionality.ipynb  Eight Schools.ipynb  Logistic Regression.ipynb  Trading Cost Estimation.ipynb  test.py
notebooks/data/: F.csv  SPY.csv
pyjags/: __init__.py  adaptive_sampling.py  arviz.py  chain_utilities.py  console.cc  dic.py  incremental_sampling.py  io.py  model.py  modules.py
test/: test_basic_model.py
tests/: test_io_roundtrip.py  test_model.py  test_public_api.py
