[build-system]
requires = [
  "scikit-build-core>=0.10.0",
  "pybind11[global]>=2.11.0",
  "packaging",
  "numpy>=1.23",
  # For sdist+wheel reproducibility
  "setuptools_scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyjags-jw"
description = "Python interface to JAGS with wheels that bundle JAGS"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Scout Jarman" }]
requires-python = ">=3.11"
dependencies = ["numpy>=1.23"]
dynamic = ["version"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[project.urls]
Homepage = "https://github.com/scoutiii/pyjags_JW/"

[tool.scikit-build]
# ensure we ship tests/docs in sdists (nice for reproducible testing)
sdist.include = [
  "pyjags/**",
  "tests/**",
  "doc/**",
  "README.md",
  "LICENSE",
  "CMakeLists.txt",
  "ci/**",
]
# cmake min is also asserted inside CMakeLists
cmake.minimum-version = "3.20"
wheel.expand-macos-universal-tags = false

[tool.scikit-build.cmake]
args = [
  "-DSKBUILD=ON",
  "-DCMAKE_BUILD_TYPE=Release",
  # On macOS, produce rpaths that resolve in wheel
  "-DCMAKE_MACOSX_RPATH=ON",
]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "pp* *-win32 *-musllinux*"
test-extras = ""
test-requires = ["pytest", "numpy"]
test-command = "pytest -q {project}/tests"

# Build JAGS inside the build container/VM before building our wheel.
# These run *inside* manylinux/macos build envs so we can capture libs.
environment = { JAGS_VERSION = "4.3.2", JAGS_PREFIX = "{project}/.jags-prefix" }

# Linux (manylinux) runs in container; compile JAGS there so auditwheel can bundle.
before-build-linux = "bash ci/install_jags_linux.sh {project}"
before-build-macos = "bash ci/install_jags_macos.sh {project}"

# Ensure our build system can find JAGS via pkg-config and rpaths
environment-pass = ["JAGS_PREFIX", "JAGS_VERSION"]

# Enable repair step (auditwheel / delocate) – on by default in cibuildwheel

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
# If you need glibc compatibility back to 2014ish, use manylinux2014; 2_28 is modern.

[tool.cibuildwheel.macos]
# macOS 11+ default; builds per-arch wheels on GitHub’s runners.

